<resources>
    <string name="app_name">Museum Finder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--MuseumDetailFragment-->
    <string name="museum_card_transition_name">%1$s</string>
    <string name="museum_card_detail_transition_name">museum_card_detail</string>

    <string name="bilde_av_et_museum">Bilde av et museum</string>

    <!--Navigation-->
    <string name="home_navigation">Home</string>
    <string name="search_navigation">Search</string>
    <string name="bucketlist_navigation">Bucketlist</string>
    <string name="map_navigation">Map</string>
    <string name="profile_navigation">Profile</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="cancel">Cancel</string>
    <string name="location_off">Failed to get location, please go to settings to enable it</string>
    <string name="no_description">Could not retrieve description resources from WikiPedia</string>
</resources>