<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_action_home"
        android:title="@string/home_navigation" />

    <item
        android:id="@+id/findMuseum"
        android:icon="@drawable/ic_search"
        android:title="@string/search_navigation" />

    <item
        android:id="@+id/bucketlistFragment"
        android:icon="@drawable/ic_bucketlist"
        android:title="@string/bucketlist_navigation" />
    <item
        android:id="@+id/mapFragment"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/map_navigation" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_action_profile"
        android:title="@string/profile_navigation" />
</menu>